tests/baselines/reference/destructuringObjectBindingPatternAndAssignment4.errors.txt
tests/cases/conformance/es6/destructuring/destructuringObjectBindingPatternAndAssignment4.ts(7,6): error TS2459: Type 'K | K1' has no property 'k' and no string index signature.
tests/cases/conformance/es6/destructuring/destructuringObjectBindingPatternAndAssignment4.ts(12,6): error TS2459: Type '{}' has no property '2' and no string index signature.
tests/cases/conformance/es6/destructuring/destructuringObjectBindingPatternAndAssignment4.ts(23,5): error TS2322: Type '{ "cat": string; }' is not assignable to type 'J'.
  Index signature is missing in type '{ "cat": string; }'.


==== tests/cases/conformance/es6/destructuring/destructuringObjectBindingPatternAndAssignment4.ts (3 errors) ====
    interface K {
        [str: string]: string;
    }
    interface K1 {
        k: string;
    }
    var {k}: K|K1 = { k: "string" };
         ~
!!! error TS2459: Type 'K | K1' has no property 'k' and no string index signature.
    
    function barn() {
        return {};
    }
    var {2: baz1} = barn()
         ~
!!! error TS2459: Type '{}' has no property '2' and no string index signature.
    
    interface J {
        [str: string]: number;
    }
    function zz() {
        return {
            "cat": "dog"
        }
    }
    
    var {"can": can}: J = zz();
        ~~~~~~~~~~~~
!!! error TS2322: Type '{ "cat": string; }' is not assignable to type 'J'.
!!! error TS2322:   Index signature is missing in type '{ "cat": string; }'.